--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,5 +40,8 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "react-router-dom": "^6.3.0"
+  }
 }
