--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "author": "Jafar Mahin",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
+    "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "nodemon": "^2.0.15"
   }
