--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
+    "mongoose": "^6.2.7",
     "nodemon": "^2.0.15"
   }
 }
