Added User Model & controller

--- a/.gitignore
+++ b/.gitignore
@@ -2327,3 +2327,366 @@ backend/node_modules/whatwg-url/lib/URLSearchParams-impl.js
 backend/node_modules/whatwg-url/lib/URLSearchParams.js
 backend/node_modules/whatwg-url/lib/utils.js
 backend/node_modules/whatwg-url/lib/VoidFunction.js
+backend/node_modules/bcryptjs/.npmignore
+backend/node_modules/bcryptjs/.travis.yml
+backend/node_modules/bcryptjs/bower.json
+backend/node_modules/bcryptjs/index.js
+backend/node_modules/bcryptjs/LICENSE
+backend/node_modules/bcryptjs/package.json
+backend/node_modules/bcryptjs/README.md
+backend/node_modules/bcryptjs/.vscode/settings.json
+backend/node_modules/bcryptjs/bin/bcrypt
+backend/node_modules/bcryptjs/dist/bcrypt.js
+backend/node_modules/bcryptjs/dist/bcrypt.min.js
+backend/node_modules/bcryptjs/dist/bcrypt.min.js.gz
+backend/node_modules/bcryptjs/dist/bcrypt.min.map
+backend/node_modules/bcryptjs/dist/README.md
+backend/node_modules/bcryptjs/externs/bcrypt.js
+backend/node_modules/bcryptjs/externs/minimal-env.js
+backend/node_modules/bcryptjs/scripts/build.js
+backend/node_modules/bcryptjs/src/bcrypt.js
+backend/node_modules/bcryptjs/src/bower.json
+backend/node_modules/bcryptjs/src/wrap.js
+backend/node_modules/bcryptjs/src/bcrypt/impl.js
+backend/node_modules/bcryptjs/src/bcrypt/util.js
+backend/node_modules/bcryptjs/src/bcrypt/prng/accum.js
+backend/node_modules/bcryptjs/src/bcrypt/prng/isaac.js
+backend/node_modules/bcryptjs/src/bcrypt/prng/README.md
+backend/node_modules/bcryptjs/src/bcrypt/util/base64.js
+backend/node_modules/bcryptjs/tests/quickbrown.txt
+backend/node_modules/bcryptjs/tests/suite.js
+backend/node_modules/buffer-equal-constant-time/.npmignore
+backend/node_modules/buffer-equal-constant-time/.travis.yml
+backend/node_modules/buffer-equal-constant-time/index.js
+backend/node_modules/buffer-equal-constant-time/LICENSE.txt
+backend/node_modules/buffer-equal-constant-time/package.json
+backend/node_modules/buffer-equal-constant-time/README.md
+backend/node_modules/buffer-equal-constant-time/test.js
+backend/node_modules/cookie-parser/HISTORY.md
+backend/node_modules/cookie-parser/index.js
+backend/node_modules/cookie-parser/LICENSE
+backend/node_modules/cookie-parser/package.json
+backend/node_modules/cookie-parser/README.md
+backend/node_modules/cookie-parser/node_modules/cookie/HISTORY.md
+backend/node_modules/cookie-parser/node_modules/cookie/index.js
+backend/node_modules/cookie-parser/node_modules/cookie/LICENSE
+backend/node_modules/cookie-parser/node_modules/cookie/package.json
+backend/node_modules/cookie-parser/node_modules/cookie/README.md
+backend/node_modules/crypto/package.json
+backend/node_modules/crypto/README.md
+backend/node_modules/ecdsa-sig-formatter/CODEOWNERS
+backend/node_modules/ecdsa-sig-formatter/LICENSE
+backend/node_modules/ecdsa-sig-formatter/package.json
+backend/node_modules/ecdsa-sig-formatter/README.md
+backend/node_modules/ecdsa-sig-formatter/src/ecdsa-sig-formatter.d.ts
+backend/node_modules/ecdsa-sig-formatter/src/ecdsa-sig-formatter.js
+backend/node_modules/ecdsa-sig-formatter/src/param-bytes-for-alg.js
+backend/node_modules/jsonwebtoken/CHANGELOG.md
+backend/node_modules/jsonwebtoken/decode.js
+backend/node_modules/jsonwebtoken/index.js
+backend/node_modules/jsonwebtoken/LICENSE
+backend/node_modules/jsonwebtoken/package.json
+backend/node_modules/jsonwebtoken/README.md
+backend/node_modules/jsonwebtoken/sign.js
+backend/node_modules/jsonwebtoken/verify.js
+backend/node_modules/jsonwebtoken/lib/JsonWebTokenError.js
+backend/node_modules/jsonwebtoken/lib/NotBeforeError.js
+backend/node_modules/jsonwebtoken/lib/psSupported.js
+backend/node_modules/jsonwebtoken/lib/timespan.js
+backend/node_modules/jsonwebtoken/lib/TokenExpiredError.js
+backend/node_modules/jsonwebtoken/node_modules/ms/index.js
+backend/node_modules/jsonwebtoken/node_modules/ms/license.md
+backend/node_modules/jsonwebtoken/node_modules/ms/package.json
+backend/node_modules/jsonwebtoken/node_modules/ms/readme.md
+backend/node_modules/jwa/index.js
+backend/node_modules/jwa/LICENSE
+backend/node_modules/jwa/package.json
+backend/node_modules/jwa/README.md
+backend/node_modules/jws/CHANGELOG.md
+backend/node_modules/jws/index.js
+backend/node_modules/jws/LICENSE
+backend/node_modules/jws/package.json
+backend/node_modules/jws/readme.md
+backend/node_modules/jws/lib/data-stream.js
+backend/node_modules/jws/lib/sign-stream.js
+backend/node_modules/jws/lib/tostring.js
+backend/node_modules/jws/lib/verify-stream.js
+backend/node_modules/lodash.includes/index.js
+backend/node_modules/lodash.includes/LICENSE
+backend/node_modules/lodash.includes/package.json
+backend/node_modules/lodash.includes/README.md
+backend/node_modules/lodash.isboolean/index.js
+backend/node_modules/lodash.isboolean/LICENSE
+backend/node_modules/lodash.isboolean/package.json
+backend/node_modules/lodash.isboolean/README.md
+backend/node_modules/lodash.isinteger/index.js
+backend/node_modules/lodash.isinteger/LICENSE
+backend/node_modules/lodash.isinteger/package.json
+backend/node_modules/lodash.isinteger/README.md
+backend/node_modules/lodash.isnumber/index.js
+backend/node_modules/lodash.isnumber/LICENSE
+backend/node_modules/lodash.isnumber/package.json
+backend/node_modules/lodash.isnumber/README.md
+backend/node_modules/lodash.isplainobject/index.js
+backend/node_modules/lodash.isplainobject/LICENSE
+backend/node_modules/lodash.isplainobject/package.json
+backend/node_modules/lodash.isplainobject/README.md
+backend/node_modules/lodash.isstring/index.js
+backend/node_modules/lodash.isstring/LICENSE
+backend/node_modules/lodash.isstring/package.json
+backend/node_modules/lodash.isstring/README.md
+backend/node_modules/lodash.once/index.js
+backend/node_modules/lodash.once/LICENSE
+backend/node_modules/lodash.once/package.json
+backend/node_modules/lodash.once/README.md
+backend/node_modules/nodemailer/.prettierrc.js
+backend/node_modules/nodemailer/CHANGELOG.md
+backend/node_modules/nodemailer/CODE_OF_CONDUCT.md
+backend/node_modules/nodemailer/CONTRIBUTING.md
+backend/node_modules/nodemailer/LICENSE
+backend/node_modules/nodemailer/package.json
+backend/node_modules/nodemailer/postinstall.js
+backend/node_modules/nodemailer/README.md
+backend/node_modules/nodemailer/SECURITY.txt
+backend/node_modules/nodemailer/lib/nodemailer.js
+backend/node_modules/nodemailer/lib/addressparser/index.js
+backend/node_modules/nodemailer/lib/base64/index.js
+backend/node_modules/nodemailer/lib/dkim/index.js
+backend/node_modules/nodemailer/lib/dkim/message-parser.js
+backend/node_modules/nodemailer/lib/dkim/relaxed-body.js
+backend/node_modules/nodemailer/lib/dkim/sign.js
+backend/node_modules/nodemailer/lib/fetch/cookies.js
+backend/node_modules/nodemailer/lib/fetch/index.js
+backend/node_modules/nodemailer/lib/json-transport/index.js
+backend/node_modules/nodemailer/lib/mail-composer/index.js
+backend/node_modules/nodemailer/lib/mailer/index.js
+backend/node_modules/nodemailer/lib/mailer/mail-message.js
+backend/node_modules/nodemailer/lib/mime-funcs/index.js
+backend/node_modules/nodemailer/lib/mime-funcs/mime-types.js
+backend/node_modules/nodemailer/lib/mime-node/index.js
+backend/node_modules/nodemailer/lib/mime-node/last-newline.js
+backend/node_modules/nodemailer/lib/mime-node/le-unix.js
+backend/node_modules/nodemailer/lib/mime-node/le-windows.js
+backend/node_modules/nodemailer/lib/qp/index.js
+backend/node_modules/nodemailer/lib/sendmail-transport/index.js
+backend/node_modules/nodemailer/lib/ses-transport/index.js
+backend/node_modules/nodemailer/lib/shared/index.js
+backend/node_modules/nodemailer/lib/smtp-connection/data-stream.js
+backend/node_modules/nodemailer/lib/smtp-connection/http-proxy-client.js
+backend/node_modules/nodemailer/lib/smtp-connection/index.js
+backend/node_modules/nodemailer/lib/smtp-pool/index.js
+backend/node_modules/nodemailer/lib/smtp-pool/pool-resource.js
+backend/node_modules/nodemailer/lib/smtp-transport/index.js
+backend/node_modules/nodemailer/lib/stream-transport/index.js
+backend/node_modules/nodemailer/lib/well-known/index.js
+backend/node_modules/nodemailer/lib/well-known/services.json
+backend/node_modules/nodemailer/lib/xoauth2/index.js
+backend/node_modules/validator/index.js
+backend/node_modules/validator/LICENSE
+backend/node_modules/validator/package.json
+backend/node_modules/validator/README.md
+backend/node_modules/validator/validator.js
+backend/node_modules/validator/validator.min.js
+backend/node_modules/validator/es/index.js
+backend/node_modules/validator/es/lib/alpha.js
+backend/node_modules/validator/es/lib/blacklist.js
+backend/node_modules/validator/es/lib/contains.js
+backend/node_modules/validator/es/lib/equals.js
+backend/node_modules/validator/es/lib/escape.js
+backend/node_modules/validator/es/lib/isAfter.js
+backend/node_modules/validator/es/lib/isAlpha.js
+backend/node_modules/validator/es/lib/isAlphanumeric.js
+backend/node_modules/validator/es/lib/isAscii.js
+backend/node_modules/validator/es/lib/isBase32.js
+backend/node_modules/validator/es/lib/isBase58.js
+backend/node_modules/validator/es/lib/isBase64.js
+backend/node_modules/validator/es/lib/isBefore.js
+backend/node_modules/validator/es/lib/isBIC.js
+backend/node_modules/validator/es/lib/isBoolean.js
+backend/node_modules/validator/es/lib/isBtcAddress.js
+backend/node_modules/validator/es/lib/isByteLength.js
+backend/node_modules/validator/es/lib/isCreditCard.js
+backend/node_modules/validator/es/lib/isCurrency.js
+backend/node_modules/validator/es/lib/isDataURI.js
+backend/node_modules/validator/es/lib/isDate.js
+backend/node_modules/validator/es/lib/isDecimal.js
+backend/node_modules/validator/es/lib/isDivisibleBy.js
+backend/node_modules/validator/es/lib/isEAN.js
+backend/node_modules/validator/es/lib/isEmail.js
+backend/node_modules/validator/es/lib/isEmpty.js
+backend/node_modules/validator/es/lib/isEthereumAddress.js
+backend/node_modules/validator/es/lib/isFloat.js
+backend/node_modules/validator/es/lib/isFQDN.js
+backend/node_modules/validator/es/lib/isFullWidth.js
+backend/node_modules/validator/es/lib/isHalfWidth.js
+backend/node_modules/validator/es/lib/isHash.js
+backend/node_modules/validator/es/lib/isHexadecimal.js
+backend/node_modules/validator/es/lib/isHexColor.js
+backend/node_modules/validator/es/lib/isHSL.js
+backend/node_modules/validator/es/lib/isIBAN.js
+backend/node_modules/validator/es/lib/isIdentityCard.js
+backend/node_modules/validator/es/lib/isIMEI.js
+backend/node_modules/validator/es/lib/isIn.js
+backend/node_modules/validator/es/lib/isInt.js
+backend/node_modules/validator/es/lib/isIP.js
+backend/node_modules/validator/es/lib/isIPRange.js
+backend/node_modules/validator/es/lib/isISBN.js
+backend/node_modules/validator/es/lib/isISIN.js
+backend/node_modules/validator/es/lib/isISO4217.js
+backend/node_modules/validator/es/lib/isISO8601.js
+backend/node_modules/validator/es/lib/isISO31661Alpha2.js
+backend/node_modules/validator/es/lib/isISO31661Alpha3.js
+backend/node_modules/validator/es/lib/isISRC.js
+backend/node_modules/validator/es/lib/isISSN.js
+backend/node_modules/validator/es/lib/isJSON.js
+backend/node_modules/validator/es/lib/isJWT.js
+backend/node_modules/validator/es/lib/isLatLong.js
+backend/node_modules/validator/es/lib/isLength.js
+backend/node_modules/validator/es/lib/isLicensePlate.js
+backend/node_modules/validator/es/lib/isLocale.js
+backend/node_modules/validator/es/lib/isLowercase.js
+backend/node_modules/validator/es/lib/isMACAddress.js
+backend/node_modules/validator/es/lib/isMagnetURI.js
+backend/node_modules/validator/es/lib/isMD5.js
+backend/node_modules/validator/es/lib/isMimeType.js
+backend/node_modules/validator/es/lib/isMobilePhone.js
+backend/node_modules/validator/es/lib/isMongoId.js
+backend/node_modules/validator/es/lib/isMultibyte.js
+backend/node_modules/validator/es/lib/isNumeric.js
+backend/node_modules/validator/es/lib/isOctal.js
+backend/node_modules/validator/es/lib/isPassportNumber.js
+backend/node_modules/validator/es/lib/isPort.js
+backend/node_modules/validator/es/lib/isPostalCode.js
+backend/node_modules/validator/es/lib/isRFC3339.js
+backend/node_modules/validator/es/lib/isRgbColor.js
+backend/node_modules/validator/es/lib/isSemVer.js
+backend/node_modules/validator/es/lib/isSlug.js
+backend/node_modules/validator/es/lib/isStrongPassword.js
+backend/node_modules/validator/es/lib/isSurrogatePair.js
+backend/node_modules/validator/es/lib/isTaxID.js
+backend/node_modules/validator/es/lib/isUppercase.js
+backend/node_modules/validator/es/lib/isURL.js
+backend/node_modules/validator/es/lib/isUUID.js
+backend/node_modules/validator/es/lib/isVariableWidth.js
+backend/node_modules/validator/es/lib/isVAT.js
+backend/node_modules/validator/es/lib/isWhitelisted.js
+backend/node_modules/validator/es/lib/ltrim.js
+backend/node_modules/validator/es/lib/matches.js
+backend/node_modules/validator/es/lib/normalizeEmail.js
+backend/node_modules/validator/es/lib/rtrim.js
+backend/node_modules/validator/es/lib/stripLow.js
+backend/node_modules/validator/es/lib/toBoolean.js
+backend/node_modules/validator/es/lib/toDate.js
+backend/node_modules/validator/es/lib/toFloat.js
+backend/node_modules/validator/es/lib/toInt.js
+backend/node_modules/validator/es/lib/trim.js
+backend/node_modules/validator/es/lib/unescape.js
+backend/node_modules/validator/es/lib/whitelist.js
+backend/node_modules/validator/es/lib/util/algorithms.js
+backend/node_modules/validator/es/lib/util/assertString.js
+backend/node_modules/validator/es/lib/util/includes.js
+backend/node_modules/validator/es/lib/util/merge.js
+backend/node_modules/validator/es/lib/util/multilineRegex.js
+backend/node_modules/validator/es/lib/util/toString.js
+backend/node_modules/validator/es/lib/util/typeOf.js
+backend/node_modules/validator/lib/alpha.js
+backend/node_modules/validator/lib/blacklist.js
+backend/node_modules/validator/lib/contains.js
+backend/node_modules/validator/lib/equals.js
+backend/node_modules/validator/lib/escape.js
+backend/node_modules/validator/lib/isAfter.js
+backend/node_modules/validator/lib/isAlpha.js
+backend/node_modules/validator/lib/isAlphanumeric.js
+backend/node_modules/validator/lib/isAscii.js
+backend/node_modules/validator/lib/isBase32.js
+backend/node_modules/validator/lib/isBase58.js
+backend/node_modules/validator/lib/isBase64.js
+backend/node_modules/validator/lib/isBefore.js
+backend/node_modules/validator/lib/isBIC.js
+backend/node_modules/validator/lib/isBoolean.js
+backend/node_modules/validator/lib/isBtcAddress.js
+backend/node_modules/validator/lib/isByteLength.js
+backend/node_modules/validator/lib/isCreditCard.js
+backend/node_modules/validator/lib/isCurrency.js
+backend/node_modules/validator/lib/isDataURI.js
+backend/node_modules/validator/lib/isDate.js
+backend/node_modules/validator/lib/isDecimal.js
+backend/node_modules/validator/lib/isDivisibleBy.js
+backend/node_modules/validator/lib/isEAN.js
+backend/node_modules/validator/lib/isEmail.js
+backend/node_modules/validator/lib/isEmpty.js
+backend/node_modules/validator/lib/isEthereumAddress.js
+backend/node_modules/validator/lib/isFloat.js
+backend/node_modules/validator/lib/isFQDN.js
+backend/node_modules/validator/lib/isFullWidth.js
+backend/node_modules/validator/lib/isHalfWidth.js
+backend/node_modules/validator/lib/isHash.js
+backend/node_modules/validator/lib/isHexadecimal.js
+backend/node_modules/validator/lib/isHexColor.js
+backend/node_modules/validator/lib/isHSL.js
+backend/node_modules/validator/lib/isIBAN.js
+backend/node_modules/validator/lib/isIdentityCard.js
+backend/node_modules/validator/lib/isIMEI.js
+backend/node_modules/validator/lib/isIn.js
+backend/node_modules/validator/lib/isInt.js
+backend/node_modules/validator/lib/isIP.js
+backend/node_modules/validator/lib/isIPRange.js
+backend/node_modules/validator/lib/isISBN.js
+backend/node_modules/validator/lib/isISIN.js
+backend/node_modules/validator/lib/isISO4217.js
+backend/node_modules/validator/lib/isISO8601.js
+backend/node_modules/validator/lib/isISO31661Alpha2.js
+backend/node_modules/validator/lib/isISO31661Alpha3.js
+backend/node_modules/validator/lib/isISRC.js
+backend/node_modules/validator/lib/isISSN.js
+backend/node_modules/validator/lib/isJSON.js
+backend/node_modules/validator/lib/isJWT.js
+backend/node_modules/validator/lib/isLatLong.js
+backend/node_modules/validator/lib/isLength.js
+backend/node_modules/validator/lib/isLicensePlate.js
+backend/node_modules/validator/lib/isLocale.js
+backend/node_modules/validator/lib/isLowercase.js
+backend/node_modules/validator/lib/isMACAddress.js
+backend/node_modules/validator/lib/isMagnetURI.js
+backend/node_modules/validator/lib/isMD5.js
+backend/node_modules/validator/lib/isMimeType.js
+backend/node_modules/validator/lib/isMobilePhone.js
+backend/node_modules/validator/lib/isMongoId.js
+backend/node_modules/validator/lib/isMultibyte.js
+backend/node_modules/validator/lib/isNumeric.js
+backend/node_modules/validator/lib/isOctal.js
+backend/node_modules/validator/lib/isPassportNumber.js
+backend/node_modules/validator/lib/isPort.js
+backend/node_modules/validator/lib/isPostalCode.js
+backend/node_modules/validator/lib/isRFC3339.js
+backend/node_modules/validator/lib/isRgbColor.js
+backend/node_modules/validator/lib/isSemVer.js
+backend/node_modules/validator/lib/isSlug.js
+backend/node_modules/validator/lib/isStrongPassword.js
+backend/node_modules/validator/lib/isSurrogatePair.js
+backend/node_modules/validator/lib/isTaxID.js
+backend/node_modules/validator/lib/isUppercase.js
+backend/node_modules/validator/lib/isURL.js
+backend/node_modules/validator/lib/isUUID.js
+backend/node_modules/validator/lib/isVariableWidth.js
+backend/node_modules/validator/lib/isVAT.js
+backend/node_modules/validator/lib/isWhitelisted.js
+backend/node_modules/validator/lib/ltrim.js
+backend/node_modules/validator/lib/matches.js
+backend/node_modules/validator/lib/normalizeEmail.js
+backend/node_modules/validator/lib/rtrim.js
+backend/node_modules/validator/lib/stripLow.js
+backend/node_modules/validator/lib/toBoolean.js
+backend/node_modules/validator/lib/toDate.js
+backend/node_modules/validator/lib/toFloat.js
+backend/node_modules/validator/lib/toInt.js
+backend/node_modules/validator/lib/trim.js
+backend/node_modules/validator/lib/unescape.js
+backend/node_modules/validator/lib/whitelist.js
+backend/node_modules/validator/lib/util/algorithms.js
+backend/node_modules/validator/lib/util/assertString.js
+backend/node_modules/validator/lib/util/includes.js
+backend/node_modules/validator/lib/util/merge.js
+backend/node_modules/validator/lib/util/multilineRegex.js
+backend/node_modules/validator/lib/util/toString.js
+backend/node_modules/validator/lib/util/typeOf.js
