User login & register

--- a/.gitignore
+++ b/.gitignore
@@ -2690,3 +2690,132 @@ backend/node_modules/validator/lib/util/merge.js
 backend/node_modules/validator/lib/util/multilineRegex.js
 backend/node_modules/validator/lib/util/toString.js
 backend/node_modules/validator/lib/util/typeOf.js
+backend/Models/userModel.js
+backend/node_modules/busboy/.travis.yml
+backend/node_modules/busboy/LICENSE
+backend/node_modules/busboy/package.json
+backend/node_modules/busboy/README.md
+backend/node_modules/busboy/deps/encoding/encoding-indexes.js
+backend/node_modules/busboy/deps/encoding/encoding.js
+backend/node_modules/busboy/lib/main.js
+backend/node_modules/busboy/lib/utils.js
+backend/node_modules/busboy/lib/types/multipart.js
+backend/node_modules/busboy/lib/types/urlencoded.js
+backend/node_modules/busboy/test/test-types-multipart-stream-pause.js
+backend/node_modules/busboy/test/test-types-multipart.js
+backend/node_modules/busboy/test/test-types-urlencoded.js
+backend/node_modules/busboy/test/test-utils-decoder.js
+backend/node_modules/busboy/test/test-utils-parse-params.js
+backend/node_modules/busboy/test/test.js
+backend/node_modules/dicer/.travis.yml
+backend/node_modules/dicer/LICENSE
+backend/node_modules/dicer/package.json
+backend/node_modules/dicer/README.md
+backend/node_modules/dicer/bench/dicer-bench-multipart-parser.js
+backend/node_modules/dicer/bench/formidable-bench-multipart-parser.js
+backend/node_modules/dicer/bench/multipartser-bench-multipart-parser.js
+backend/node_modules/dicer/bench/multiparty-bench-multipart-parser.js
+backend/node_modules/dicer/bench/parted-bench-multipart-parser.js
+backend/node_modules/dicer/bench/parted-multipart.js
+backend/node_modules/dicer/lib/Dicer.js
+backend/node_modules/dicer/lib/HeaderParser.js
+backend/node_modules/dicer/lib/PartStream.js
+backend/node_modules/dicer/test/test-endfinish.js
+backend/node_modules/dicer/test/test-headerparser.js
+backend/node_modules/dicer/test/test-multipart-extra-trailer.js
+backend/node_modules/dicer/test/test-multipart-nolisteners.js
+backend/node_modules/dicer/test/test-multipart.js
+backend/node_modules/dicer/test/test.js
+backend/node_modules/dicer/test/fixtures/many/original
+backend/node_modules/dicer/test/fixtures/many/part1
+backend/node_modules/dicer/test/fixtures/many/part1.header
+backend/node_modules/dicer/test/fixtures/many/part2
+backend/node_modules/dicer/test/fixtures/many/part2.header
+backend/node_modules/dicer/test/fixtures/many/part3
+backend/node_modules/dicer/test/fixtures/many/part3.header
+backend/node_modules/dicer/test/fixtures/many/part4
+backend/node_modules/dicer/test/fixtures/many/part4.header
+backend/node_modules/dicer/test/fixtures/many/part5
+backend/node_modules/dicer/test/fixtures/many/part5.header
+backend/node_modules/dicer/test/fixtures/many/part6
+backend/node_modules/dicer/test/fixtures/many/part6.header
+backend/node_modules/dicer/test/fixtures/many/part7
+backend/node_modules/dicer/test/fixtures/many/part7.header
+backend/node_modules/dicer/test/fixtures/many-noend/original
+backend/node_modules/dicer/test/fixtures/many-noend/part1
+backend/node_modules/dicer/test/fixtures/many-noend/part1.header
+backend/node_modules/dicer/test/fixtures/many-noend/part2
+backend/node_modules/dicer/test/fixtures/many-noend/part2.header
+backend/node_modules/dicer/test/fixtures/many-noend/part3
+backend/node_modules/dicer/test/fixtures/many-noend/part3.header
+backend/node_modules/dicer/test/fixtures/many-noend/part4
+backend/node_modules/dicer/test/fixtures/many-noend/part4.header
+backend/node_modules/dicer/test/fixtures/many-noend/part5
+backend/node_modules/dicer/test/fixtures/many-noend/part5.header
+backend/node_modules/dicer/test/fixtures/many-noend/part6
+backend/node_modules/dicer/test/fixtures/many-noend/part6.header
+backend/node_modules/dicer/test/fixtures/many-noend/part7.header
+backend/node_modules/dicer/test/fixtures/many-wrongboundary/original
+backend/node_modules/dicer/test/fixtures/many-wrongboundary/preamble
+backend/node_modules/dicer/test/fixtures/many-wrongboundary/preamble.error
+backend/node_modules/dicer/test/fixtures/nested/original
+backend/node_modules/dicer/test/fixtures/nested/part1
+backend/node_modules/dicer/test/fixtures/nested/part1.header
+backend/node_modules/dicer/test/fixtures/nested/part2
+backend/node_modules/dicer/test/fixtures/nested/part2.header
+backend/node_modules/dicer/test/fixtures/nested-full/original
+backend/node_modules/dicer/test/fixtures/nested-full/part1
+backend/node_modules/dicer/test/fixtures/nested-full/part1.header
+backend/node_modules/dicer/test/fixtures/nested-full/part2
+backend/node_modules/dicer/test/fixtures/nested-full/part2.header
+backend/node_modules/dicer/test/fixtures/nested-full/preamble.header
+backend/node_modules/dotenv/CHANGELOG.md
+backend/node_modules/dotenv/config.d.ts
+backend/node_modules/dotenv/config.js
+backend/node_modules/dotenv/LICENSE
+backend/node_modules/dotenv/package.json
+backend/node_modules/dotenv/README.md
+backend/node_modules/dotenv/lib/cli-options.js
+backend/node_modules/dotenv/lib/env-options.js
+backend/node_modules/dotenv/lib/main.d.ts
+backend/node_modules/dotenv/lib/main.js
+backend/node_modules/express-fileupload/.eslintignore
+backend/node_modules/express-fileupload/.eslintrc
+backend/node_modules/express-fileupload/.prettierrc
+backend/node_modules/express-fileupload/LICENSE
+backend/node_modules/express-fileupload/package.json
+backend/node_modules/express-fileupload/README.md
+backend/node_modules/express-fileupload/.circleci/config.yml
+backend/node_modules/express-fileupload/example/index.html
+backend/node_modules/express-fileupload/example/README.md
+backend/node_modules/express-fileupload/example/server.js
+backend/node_modules/express-fileupload/example/uploads/placeholder.txt
+backend/node_modules/express-fileupload/lib/fileFactory.js
+backend/node_modules/express-fileupload/lib/index.js
+backend/node_modules/express-fileupload/lib/isEligibleRequest.js
+backend/node_modules/express-fileupload/lib/memHandler.js
+backend/node_modules/express-fileupload/lib/processMultipart.js
+backend/node_modules/express-fileupload/lib/processNested.js
+backend/node_modules/express-fileupload/lib/tempFileHandler.js
+backend/node_modules/express-fileupload/lib/uploadtimer.js
+backend/node_modules/express-fileupload/lib/utilities.js
+backend/node_modules/express-fileupload/test/fileFactory.spec.js
+backend/node_modules/express-fileupload/test/fileLimitUploads.spec.js
+backend/node_modules/express-fileupload/test/multipartFields.spec.js
+backend/node_modules/express-fileupload/test/multipartUploads.spec.js
+backend/node_modules/express-fileupload/test/options.spec.js
+backend/node_modules/express-fileupload/test/processNested.spec.js
+backend/node_modules/express-fileupload/test/server.js
+backend/node_modules/express-fileupload/test/tempFile.spec.js
+backend/node_modules/express-fileupload/test/uploadtimer.spec.js
+backend/node_modules/express-fileupload/test/utilities.spec.js
+backend/node_modules/express-fileupload/test/files/basket.ball.bp
+backend/node_modules/express-fileupload/test/files/basketball.png
+backend/node_modules/express-fileupload/test/files/car.png
+backend/node_modules/express-fileupload/test/files/emptyfile.txt
+backend/node_modules/express-fileupload/test/files/my$Invalid#fileName.png123
+backend/node_modules/express-fileupload/test/files/tree.png
+backend/node_modules/streamsearch/LICENSE
+backend/node_modules/streamsearch/package.json
+backend/node_modules/streamsearch/README.md
+backend/node_modules/streamsearch/lib/sbmh.js
