--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.0",
     "cloudinary": "^1.29.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
