send mail created

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -5,3 +5,13 @@ JWT_SECRET=ALSJKFHFLKKJFSDF
 JWT_EXPIRE=5d
 
 COOKIE_EXPIRE=5
+
+SMTP_SERVICE=gmail
+
+SMTP_HOST=smtp.gmail.com
+
+SMTP_PORT=465
+
+SMTP_MAIL=jiteshsureka@gmail.com
+
+SMTP_PASSWORD=surekahouse12
