recycler Addition done

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -6,12 +6,12 @@ JWT_EXPIRE=5d
 
 COOKIE_EXPIRE=5
 
-SMTP_SERVICE=gmail
+SMTP_SERVICE=yahoo
 
-SMTP_HOST=smtp.gmail.com
+SMTP_HOST=smtp.mail.yahoo.com
 
-SMTP_PORT=465
+SMTP_PORT=587
 
-SMTP_MAIL=jiteshsureka@gmail.com
+SMTP_MAIL=mbin2022@yahoo.com
 
-SMTP_PASSWORD=surekahouse12
+SMTP_PASSWORD=jthlnhqowacdhpzw
