--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^6.2.7",
     "nodemailer": "^4.7.0",
     "nodemon": "^2.0.15",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.5.1",
     "validator": "^13.7.0"
   }
 }
