--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^5.1.3",
     "file-loader": "^6.2.0",
     "js-cookie": "^3.0.1",
+    "node-sass": "^7.0.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
@@ -23,6 +25,8 @@
     "react-scripts": "5.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.52.1",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
