--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "file-loader": "^6.2.0",
+    "firebase": "^9.8.2",
     "js-cookie": "^3.0.1",
     "node-sass": "^7.0.1",
     "query-string": "^7.1.1",
