--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -6,12 +6,10 @@ JWT_EXPIRE=5d
 
 COOKIE_EXPIRE=5
 
-SMTP_SERVICE=yahoo
+SMTP_HOST=smtp.live.com
 
-SMTP_HOST=smtp.mail.yahoo.com
+SMTP_PORT=25
 
-SMTP_PORT=587
+SMTP_MAIL=mrbin2022@outlook.com
 
-SMTP_MAIL=mbin2022@yahoo.com
-
-SMTP_PASSWORD=jthlnhqowacdhpzw
+SMTP_PASSWORD=Mrbin@2022
