Google Map Product Show integrated

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -6,9 +6,11 @@ JWT_EXPIRE=5d
 
 COOKIE_EXPIRE=5
 
+SMTP_SERVICE=live
+
 SMTP_HOST=smtp.live.com
 
-SMTP_PORT=25
+SMTP_PORT=465
 
 SMTP_MAIL=mrbin2022@outlook.com
 
