--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
+    "@react-google-maps/api": "^2.12.0",
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow/tfjs": "^3.18.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -16,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "file-loader": "^6.2.0",
     "firebase": "^9.8.2",
+    "google-maps-react": "^2.0.6",
     "js-cookie": "^3.0.1",
     "node-sass": "^7.0.1",
     "query-string": "^7.1.1",
@@ -24,12 +26,14 @@
     "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
     "react-webcam": "^7.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.52.1",
+    "seedrandom": "^2.4.4",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
