--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
+    "express": "^4.18.2",
     "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
@@ -26,6 +26,8 @@
     "nodemon": "^2.0.15",
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "validator": "^13.7.0"
   }
 }
